fix top margin for signin on mobile

--- a/client/src/pages/SignIn/SignIn.scss
+++ b/client/src/pages/SignIn/SignIn.scss
@@ -10,3 +10,9 @@
     flex-wrap: wrap;
     pointer-events: all;
 }
+
+@media screen and (max-width: 400px) {
+    .SignIn {
+        margin-top: 50px;
+    }
+}
